# wof

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: CODEBASE.md  SYNTAX.md
include/: lexer.hpp  log.hpp  pch.hpp  sexpr.hpp  util.hpp
include/compiler/: compiler.hpp  wtype.hpp
src/: lexer.cc  log.cc  sexpr.cc  util.cc  wofc.cc
src/compiler/: assign_builder.cc  block_builder.cc  body_builder.cc  cast.cc  compiler.cc  decay.cc  elif_builder.cc  else_builder.cc  endif_builder.cc  expr_builder.cc  extern_builder.cc  function_builder.cc  if_builder.cc  return_builder.cc  struct_builder.cc  var_builder.cc  while_builder.cc  wtype.cc
tests/: calc.wof  debug.wof  struct.wof
